--- a/assignments/womens_soccer.qmd
+++ b/assignments/womens_soccer.qmd
@@ -43,7 +43,7 @@ matches_2023 |>
 
 ```{r}
 matches_2022 |> 
-  filter(team == 'Alcorn Lady Braves') |> 
+  filter(team == 'Maryland Terrapins, Terps') |> 
   group_by(team) |> 
   summarise(
     total_shots = sum(sh_att), 
@@ -57,8 +57,17 @@ matches_2022 |>
 3. What about draws - Maryland started 2022 with 4 ties. Have any other teams had as many this season?
 
 ```{r}
+matches_2023 |> 
+  filter(outcome == 'Draw') |> 
+  group_by(team) |> 
+  summarise(
+    draws = n()
+  ) |> 
+  arrange(desc(draws)) |> 
+  filter(draws > 3)
 ```
 
+In addition to Maryland, only eight other teams this season have drawn four games. The Terps are the only Power 5 school to have done so.
 
 4. How many total corner kicks has Maryland had so far and how many have its opponents have? Calculate the difference between the two totals for every team.
 
@@ -67,10 +76,10 @@ matches_2022 |>
 matches_2023 |> 
   group_by(team) |> 
   summarise(
-    avg_corners = mean(corners), 
-    avg_defensive_corners = mean(defensive_corners),
-    diff = (avg_corners-avg_defensive_corners)
+    total_corners = sum(corners), 
+    total_opp_corners = sum(defensive_corners),
+    diff = (total_corners-total_opp_corners)
   ) |> 
   arrange(desc(diff))
 ```
-
+Maryland is -2 in corner differential this season. Troy is absolutely crushing it on corners.
