--- a/assignments/womens_soccer.qmd
+++ b/assignments/womens_soccer.qmd
@@ -9,18 +9,18 @@ We'll use this notebook to explore some NCAA women's soccer data and [our questi
 library(tidyverse)
 ```
 
-We'll want to start with 2023 match data, which is located in [this GitHub repository](https://github.com/dwillis/NCAAWomensSoccerData). We can load the match data directly from GitHub using `read_csv`:
+We'll want to start with 2024 match data, which is located in [this GitHub repository](https://github.com/dwillis/NCAAWomensSoccerData). We can load the match data directly from GitHub using `read_csv`:
 
 
 ```{r}
-matches_2023 <- read_csv("https://raw.githubusercontent.com/dwillis/NCAAWomensSoccerData/main/data/ncaa_womens_soccer_matchstats_2023.csv")
+matches_2024 <- read_csv("https://raw.githubusercontent.com/dwillis/NCAAWomensSoccerData/main/data/ncaa_womens_soccer_matchstats_2024.csv")
 ```
 
 Let's take a look at this data to see what it contains, using `head` and `glimpse`:
 
 ```{r}
-head(matches_2023)
-glimpse(matches_2023)
+head(matches_2024)
+glimpse(matches_2024)
 ```
 
 Now, onto the questions using aggregates, which means `group_by` and `summarize`:
@@ -31,21 +31,23 @@ Now, onto the questions using aggregates, which means `group_by` and `summarize`
 
 ```
 
-2. What about the same shot stats from last season's first four games? You'll need to load the matches from 2022 - just change the season in the URL - and filter by date to find the first four games.
+2. What about the same shot stats from last season's first four games? You'll need to load the matches from 2023 - just change the season in the URL - and filter by date to find the first four games.
 
 ```{r}
 
 ```
 
 
-3. What about draws - Maryland started 2022 with 4 ties. Have any other teams had as many this season?
+3. Maryland started 2022 with 4 draws. Have any other teams had as many this season?
 
 ```{r}
 ```
 
 
-4. How many total corner kicks has Maryland had so far and how many have its opponents have? Calculate the difference between the two totals for every team.
+4. How many total corner kicks has Maryland had so far this season and how many have its opponents have? Calculate the difference between the two totals for every team using group_by, summarize and mutate.
 
 ```{r}
+
 ```
 
+5. What's the most interesting thing you've seen from these questions?
