--- a/exercises/aggregates/aggregates.qmd
+++ b/exercises/aggregates/aggregates.qmd
@@ -197,11 +197,11 @@ Which position in the NBA plays the most minutes? And what is the highest and lo
 nbaplayers %>% 
   group_by(Pos) %>% 
   summarise(
-    total = sum(*COLUMN*), 
+    total = sum(MP), 
     avgminutes = mean(MP), 
-    minminutes = *function*(*COLUMN*),
-    maxminutes = *function*(*COLUMN*),
-    stdev = sd(*COLUMN*)) %>% arrange(desc(total))
+    minminutes = min(MP),
+    maxminutes = max(MP),
+    stdev = sd(MP)) %>% arrange(desc(total))
 ```
 
 So again, no surprise, shooting guards spend the most minutes on the floor in the NBA. They average 951 minutes, but we noted why that's trouble. The minimum is a one-minute wonder, max is some team failing at load management, and the standard deviation is a measure of how spread out the data is. In this case, not the highest spread among positions, but pretty high. So you know you've got some huge minutes players and a bunch of bench players.
