--- a/assignments/womens_soccer.qmd
+++ b/assignments/womens_soccer.qmd
@@ -28,12 +28,30 @@ Now, onto the questions using aggregates, which means `group_by` and `summarize`
 1. How many shots in total has Maryland attempted and how many have been on goal? Calculate a percentage of shots on goal.
 
 ```{r}
-
+matches_2024 |>
+  filter(team_id==392) |>
+  group_by(team) |> 
+  summarise(
+    total_shots = sum(sh_att),
+    shots_on_goal = sum(so_g),
+    pct_goal_shots = shots_on_goal/total_shots
+  )
 ```
 
 2. What about the same shot stats from last season's first four games? You'll need to load the matches from 2023 - just change the season in the URL - and filter by date to find the first four games.
 
 ```{r}
+matches_2023 <- read_csv("https://raw.githubusercontent.com/dwillis/NCAAWomensSoccerData/main/data/ncaa_womens_soccer_matchstats_2023.csv")
+
+matches_2023 |> 
+  filter(team == "Maryland Terrapins, Terps") |> 
+  filter(date <= '2023-08-31') |> 
+  group_by(team) |> 
+  summarise(
+    total_shots = sum(sh_att),
+    shots_on_goal = sum(so_g),
+    pct_goal_shots = shots_on_goal/total_shots
+  )
 
 ```
 
@@ -41,13 +59,32 @@ Now, onto the questions using aggregates, which means `group_by` and `summarize`
 3. Maryland started 2022 with 4 draws. Have any other teams had as many this season?
 
 ```{r}
+matches_2024 |> 
+  filter(outcome == 'Draw') |> 
+  group_by(team) |> 
+  summarise(
+    draws = n()
+  ) |> 
+  arrange(desc(draws))
+
 ```
 
 
 4. How many total corner kicks has Maryland had so far this season and how many have its opponents have? Calculate the difference between the two totals for every team using group_by, summarize and mutate.
 
 ```{r}
+matches_2024 |>
+  group_by(team) |> 
+  summarise(
+    umd_corners = sum(corners),
+    def_corners = sum(defensive_corners)
+  ) |> 
+  mutate(diff = umd_corners-def_corners) |> 
+  arrange(desc(diff))
+
 
 ```
 
 5. What's the most interesting thing you've seen from these questions?
+
+Maryland actually seemed to start last season better in terms of shots and shots on goal than it has this season, which I don't think I would have expected.
